--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 <h1>CV-Application</h1>
-<p>Welcome to my vita. I am convinced that a résumé should give the reader the required amount of information, not the forced amount. That's why I built this application.</p>
+<div class="welcome">Welcome to my vita. My name is Katrin Fellner.</div>
+<div class="introduction">I am convinced that a résumé should give the reader the required amount of information, not the forced amount. That's why I built this application. Check out my other projects on: </div>
 <div class="container mt-5">
   <div class="row">
 
@@ -94,6 +95,8 @@
         </br></br>
           <div id="show-information" class="show-information">Click on yellow words to display more information here</div>
         </div>
+      </br>
+      </br>
     
       </div>
     </div>
