--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <h3>career</h3>
         <div class="row">
           <div class="col-1">2021 </div>
-          <div class="col-3 text-center background-msc">freelancer</div>
-          <div class="col-3 text-center background-size">network partner</div>
-          <div class="col-3 text-center background-resil">educational</div>
+          <div class="col-3 text-center background-msc"><strong>freelancer</strong></div>
+          <div class="col-3 text-center background-size"><strong>network partner</strong></div>
+          <div class="col-3 text-center background-resil"><strong>consultant</strong></div>
         </div>
     
         <div class="row">
           <div class="col-1">2020 </div>
           <a class="col-3 text-center background-msc clickable-item" href="#" id="psychologist">psychologist</a>
           <div class="col-3 text-center background-size">Netzwerk</div>
-          <div class="col-3 text-center background-resil">consultant</div>
+          <div class="col-3 text-center background-resil">education</div>
         </div>
     
         <div class="row">
