fixed issue with link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <h1>CV-Application</h1>
 <div class="welcome">Welcome to my résumé. I am Katrin Fellner.</div>
-<div class="introduction">I am convinced that a résumé should give the reader the required amount of information, not the forced amount. That's why I built this application. Click on the yellow items for more information.</div>
+<div class="introduction">I am convinced that a résumé should give the reader the required amount of information, not the forced amount. That's why I built this application.Click on the yellow items for more information.</div>
 <div class="container mt-5">
   <div class="row">
 
@@ -174,7 +174,7 @@
             </div>
 
             <div class="row col-11">
-              <a class="previous clickable-item" href="#" id="previous"><span class="arrow">▼</span></a><em class="white">previous education: highschool examination</em>
+              <a class="previous clickable-item" href="#" id="previous-edu"><span class="arrow">▼</span></a><em class="white">previous education: highschool examination</em>
               </br></br>
               <div class="underline white ">Click on yellow items to display more information here:</div><br /><br />
               <div id="show-information-edu" class="show-information white"></div>
