added above in html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row col-11">
           <a class="previous clickable-item" href="#" id="previous"><span class="arrow">▼</span></a><em class="white">previous career: kindergarden teacher</em>
         </br></br>
-          <div class="underline white">Click on yellow items to display more information here:</div><br /><br />
+          <div class="underline white">Click on yellow items above to display more information here:</div><br /><br />
           <div id="show-information" class="show-information white"></div>
         </div>
       </br>
@@ -176,7 +176,7 @@
             <div class="row col-11">
               <a class="previous clickable-item" href="#" id="previous-edu"><span class="arrow">▼</span></a><em class="white">previous education: highschool examination</em>
               </br></br>
-              <div class="underline white ">Click on yellow items to display more information here:</div><br /><br />
+              <div class="underline white ">Click on yellow items above to display more information here:</div><br /><br />
               <div id="show-information-edu" class="show-information white"></div>
             </div>
 
