added some spacing for small devices

--- a/index.html
+++ b/index.html
@@ -133,29 +133,29 @@
 
             <div class="row">
               <div class="col-1">2017 </div>
-              <a class="col-3 text-center background-4 clickable-item" href="#" id="master">psychology</a>
-              <a class="col-3 text-center background-7 clickable-item" href="#" id="trainer">trainer</a>
+              <a class="col-3 text-center background-4 clickable-item" href="#" id="master">psychologist</a>
+              <a class="col-3 text-center background-6 clickable-item" href="#" id="trainer">trainer</a>
               <a class="col-3 text-center background-4 clickable-item" href="#" id="coach">coach</a>
             </div>
 
             <div class="row">
               <div class="col-1">2016 </div>
-              <div class="col-3 text-center background-4 white">Bsc & Msc</div>
-              <div class="col-3 text-center background-7 white">selfmanagement</div>
+              <div class="col-3 text-center background-4 white">applied</div>
+              <div class="col-3 text-center background-6 white">selfmanagement</div>
               <div class="col-3 text-center background-4 white">resilience</div>
             </div>
 
             <div class="row">
               <div class="col-1">2015 </div>
-              <div class="col-3 text-center background-4"></div>
-              <div class="col-3 text-center background-7 white"></div>
+              <div class="col-3 text-center background-4 white">sciences</div>
+              <div class="col-3 text-center background-6 white"></div>
               <div class="col-3 text-center"></div>
             </div>
 
             <div class="row">
               <div class="col-1">2014 </div>
-              <div class="col-3 text-center background-4"></div>
-              <div class="col-3 text-center background-7 white"></div>
+              <div class="col-3 text-center background-4 white">Msc/Bsc</div>
+              <div class="col-3 text-center background-6 white"></div>
               <div class="col-3 text-center"></div>
             </div>
 
