--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-1">2021 </div>
           <a class="col-3 text-center background-5 clickable-item" href="#" id="psychologist">freelancer</a>
-          <a class="col-3 text-center background-7 clickable-item" href="#" id="kadertraining">network partner</a>
+          <a class="col-3 text-center background-7 clickable-item" href="#" id="kadertraining">networkpartner</a>
           <a class="col-3 text-center background-6 clickable-item" href="#" id="consultant">consultant</a>
         </div>
     
@@ -112,7 +112,7 @@
           <div class="row">
             
             <div class="col-1">2021 </div>
-            <a class="col-3 text-center background-7 clickable-item" href="#" id="digibil">digital education</a>
+            <a class="col-3 text-center background-7 clickable-item" href="#" id="digibil">digital learning</a>
             <a class="col-3 text-center background-5 clickable-item" href="#" id="coding">coding</a>
           </div>
 
@@ -144,7 +144,7 @@
             <div class="row">
               <div class="col-1">2016 </div>
               <div class="col-3 text-center background-4 white">applied</div>
-              <div class="col-3 text-center background-6 white">selfmanagement</div>
+              <div class="col-3 text-center background-6 white">motivation</div>
               <div class="col-3 text-center"></div>
             </div>
 
