tried to set an anchor

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="row">
             <div class="col-1">2021 </div>
             <a class="col-3 text-center background-5 clickable-item" href="#" id="psychologist">freelancer</a>
-            <div class="col-3 text-center" id="kadertraining"></div>
+            <div class="col-3 text-center"></div>
             <a class="col-3 text-center background-6 clickable-item" href="#" id="consultant">consultant</a>
           </div>
       
@@ -95,9 +95,10 @@
           <div class="row col-11">
             <a class="previous clickable-item" href="#" id="previous"><span class="arrow">▼</span><div class="clickable-item">  previous career: kindergarden teacher</div></a>
           </br></br>
-            <div class="white""></div><br />
+            <div class="white"></div><br />
             <div id="show-information" class="show-information"></div>
           </div>
+
         </br>
         </br>
       </div>
