--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="col-lg-6 col-sm-12">
         <div class="container">
           <h3>career</h3>
-          <div class="row">
+          <div class="row" id="anchor-one">
             <div class="col-1">2021 </div>
             <a class="col-3 text-center background-5 clickable-item" href="#" id="psychologist">freelancer</a>
             <div class="col-3 text-center"></div>
@@ -107,7 +107,7 @@
     <div class="col-lg-6 col-sm-12">
         <div class="container">
         <h3>education</h3>
-          <div class="row">
+          <div class="row" id="anchor-two">
             
             <div class="col-1">2021 </div>
             <a class="col-3 text-center background-7 clickable-item" href="#" id="digibil">digital learning</a>
