--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
             <div class="row">
               <div class="col-1">2017 </div>
-              <a class="col-3 text-center background-4 clickable-item" href="#" id="master">psychologist</a>
-              <a class="col-3 text-center background-6 clickable-item" href="#" id="trainer">trainer</a>
+              <a class="col-3 text-center background-4 clickable-item" href="#" id="master">psychology</a>
+              <a class="col-3 text-center background-6 clickable-item" href="#" id="trainer">training</a>
               <div class="col-3 text-center"></div>
             </div>
 
