added link to GitHub Profile

--- a/index.html
+++ b/index.html
@@ -188,10 +188,12 @@
 
 <footer class="container white mt-5">
   <p>
-    <small>Visit me on my  
-      <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item" title="Website Katrin Fellner" target="_blank"> website</a> 
+    <small>This website was built with HTML, CSS and JavaScript. Visit me on my  
+      <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item" title="Website Katrin Fellner" target="_blank"> website</a>, on
+      <a href="https://github.com/katrin-fe" class="clickable-item" title="GitHub Profile" target="_blank"> GitHub </a>
       or contact me: <a href="mailto:mail@katrinfellner.com" class="clickable-item" title="Mail Katrin Fellner"> mail@katrinfellner.com.</a> 
-      ♡ hearing from you.
+      ♡ hearing from you.</br>
+      
     </small>
   </p>
 </footer>
