changed anchor position

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="col-lg-6 col-sm-12">
         <div class="container">
           <h3>career</h3>
-          <div class="row" id="anchor-one">
+          <div class="row">
             <div class="col-1">2021 </div>
             <a class="col-3 text-center background-5 clickable-item" href="#" id="psychologist">freelancer</a>
             <div class="col-3 text-center"></div>
@@ -92,7 +92,7 @@
             <div class="col-3 text-center background-4"></div>
           </div>
       
-          <div class="row col-11">
+          <div class="row col-11"  id="anchor-one">
             <a class="previous clickable-item" href="#" id="previous"><span class="arrow">▼</span><div class="clickable-item">  previous career: kindergarden teacher</div></a>
           </br></br>
             <div class="white"></div><br />
@@ -107,7 +107,7 @@
     <div class="col-lg-6 col-sm-12">
         <div class="container">
         <h3>education</h3>
-          <div class="row" id="anchor-two">
+          <div class="row">
             
             <div class="col-1">2021 </div>
             <a class="col-3 text-center background-7 clickable-item" href="#" id="digibil">digital learning</a>
@@ -174,7 +174,7 @@
               <div class="col-3 text-center"></div>
             </div>
 
-            <div class="row col-11">
+            <div class="row col-11" id="anchor-two">
               <a class="previous clickable-item" href="#" id="previous-edu"><span class="arrow">▼</span><div class="clickable-item">   previous education: highschool examination</div></a>
               </br></br>
               <div class="white"></div><br />
