Changed  some content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>CV-Application</h1>
 <div class="welcome">Welcome to my résumé.  I am Katrin Fellner.</div>
 <div class="welcome smalldev left">Click on the yellow words for more information.</div>
-<div class="introduction">I am convinced that a résumé should give the reader the required amount of information, not the forced amount. That's why I built this application.</div>
+<div class="introduction">I am convinced that a résumé should give the reader only what is required - not all the excess information. That's why I built this application.</div>
 
 <div class="container mt-5">
   <div class="row">
