added thanks to author picture unsplash

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <h1>CV-Application</h1>
 <div class="welcome">Welcome to my résumé.  I am Katrin Fellner.</div>
 <div class="welcome smalldev left">Click on the yellow words for more information.</div>
-<div class="introduction">I am convinced that a résumé should give the reader only what is required - not all the excess information. That's why I built this application.</div>
 
 <div class="container mt-5">
   <div class="row">
@@ -192,7 +191,8 @@
       <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item" title="Website Katrin Fellner" target="_blank"> website</a>, on
       <a href="https://github.com/katrin-fe" class="clickable-item" title="GitHub Profile" target="_blank"> GitHub </a>
       or contact me: <a href="mailto:mail@katrinfellner.com" class="clickable-item" title="Mail Katrin Fellner"> mail@katrinfellner.com.</a> 
-      ♡ hearing from you.</br>
+      ♡ hearing from you.</br> 
+      Thanks to <a href="https://unsplash.com/@paulearlephotography" class="clickable-item" title="Unsplash">Paul Earle</a> for the beautiful background-image.
       
     </small>
   </p>
