changed some content

--- a/freelancer.html
+++ b/freelancer.html
@@ -14,13 +14,12 @@
     <title>CV-App Katrin Fellner</title>
 </head>
 
-<body>
+<body class="">
 
 <p class="ms-5 mt-5"><a href="/index.html" class="clickable-item"><strong>❮ </strong>Back To App</a></p>
 <div>
-    <h2 class="ms-5 mt-5">My own business</br>the coding psychologist ;)</h2></br>
-    <p class="ms-5">In 2015 I established my own business. Since then I worked on many interesting projects for organizations and
-    universities - specialised in suitability diagnostics, development centers and trainings. In 2019 my book <a href="https://www.springer.com/de/book/9783658258962" class="clickable-item">Moderne Personalauswahl</a> (Modern Employee Selection) was published.</p>
+    <h2 class="ms-5 mt-5">My own business</br>Coding psychologist ;)</h2></br>
+    <p class="ms-5">In 2015 I established my own business - specialised in suitability diagnostics, development centers and trainings. In 2019 my book <a href="https://www.springer.com/de/book/9783658258962" class="clickable-item">Moderne Personalauswahl</a> (Modern Employee Selection) was published.</p>
     <p class="ms-5">2015 - 2020: As a network partner of <a href="https://www.kadertraining.ch/" class="clickable-item">Netzwerk Kadertraining GmbH</a> I
     designed, organized and executed assessment trainings for job-seeking managers. Furthermore I gave
     advice on the quality of psychological diagnostics and was responsible for coordinating with universities.
