--- a/freelancer.html
+++ b/freelancer.html
@@ -14,17 +14,17 @@
     <title>CV-App Katrin Fellner</title>
 </head>
 
-<body class="">
+<body class="subsite">
 
 <p class="ms-5 mt-5"><a href="/index.html" class="clickable-item"><strong>❮ </strong>Back To App</a></p>
 <div>
     <h2 class="ms-5 mt-5">My own business</br>Coding psychologist ;)</h2></br>
-    <p class="ms-5">In 2015 I established my own business - specialised in suitability diagnostics, development centers and trainings. In 2019 my book <a href="https://www.springer.com/de/book/9783658258962" class="clickable-item">Moderne Personalauswahl</a> (Modern Employee Selection) was published.</p>
-    <p class="ms-5">2015 - 2020: As a network partner of <a href="https://www.kadertraining.ch/" class="clickable-item">Netzwerk Kadertraining GmbH</a> I
+    <p class="ms-5">In 2015 I established my own business - specialised in trainings, suitability diagnostics and  development centers for organizations and universities. In 2019 my book <a href="https://www.springer.com/de/book/9783658258962" class="clickable-item-subsite" target="_blank">Moderne Personalauswahl</a> (Modern Employee Selection) was published.</p>
+    <p class="ms-5">2015 - 2020: As a network partner of <a href="https://www.kadertraining.ch/" class="clickable-item-subsite" target="_blank">Netzwerk Kadertraining GmbH</a> I
     designed, organized and executed assessment trainings for job-seeking managers. Furthermore I gave
     advice on the quality of psychological diagnostics and was responsible for coordinating with universities.
     </p>
-    <p class="ms-5">Since 2021 I design and build websites and applications. See my <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item">portfolio</a>.
+    <p class="ms-5">Since 2021 I design and build websites and applications. See my <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite" target="_blank">portfolio</a>.
     </p>
 </div>
 
