worked on media queries freelance site

--- a/freelancer.html
+++ b/freelancer.html
@@ -16,9 +16,9 @@
 
 <body class="subsite">
 
-<p class="ms-5 mt-5"><a href="/index.html" class="clickable-item"><strong>❮ </strong>Back To App</a></p>
+<p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
 <div>
-    <h2 class="ms-5 mt-5">My own business</br>Coding psychologist ;)</h2></br>
+    <h2 class="ms-5 mt-5 mb-4">My own business:</br>Psychology & Web Development</h2>
     <p class="ms-5">In 2015 I established my own business - specialised in trainings, suitability diagnostics and  development centers for organizations and universities. In 2019 my book <a href="https://www.springer.com/de/book/9783658258962" class="clickable-item-subsite" target="_blank">Moderne Personalauswahl</a> (Modern Employee Selection) was published.</p>
     <p class="ms-5">2015 - 2020: As a network partner of <a href="https://www.kadertraining.ch/" class="clickable-item-subsite" target="_blank">Netzwerk Kadertraining GmbH</a> I
     designed, organized and executed assessment trainings for job-seeking managers. Furthermore I gave
