--- a/studentjob.html
+++ b/studentjob.html
@@ -18,10 +18,9 @@
 
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
-        <h2 class="ms-5 mt-5">Consultant Education</h2></br>
-        <p class="ms-5">Since 2019 I've taken part in school development for the <a href="https://www.stadt.sg.ch/home/verwaltung-politik/direktionen/bildung-freizeit/schule-musik.html" class="clickable-item-subsite">city of St.Gallen</a>. Part of my role is facilitating the
-        digitalisation, managing internal communication and assisting the management.</p>
-        </p>
+        <h2 class="ms-5 mt-5">Office Assistant</h2></br>
+        <p class="ms-5">As a student I did a lot of administration, organization, customer management and writing (newsletter, advertisements,
+        website) for <a href="https://oxalis.ch/" class="clickable-item-subsite">therapy center Oxalis</a> near Zurich.</p>
     </div>
 
 
@@ -29,5 +28,3 @@
 </body>
 
 </html>
-
-
