created all subsites carreer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
       
           <div class="row col-11"  id="anchor-one">
-            <a class="previous clickable-item" href="#" id="previous"><span class="arrow">▼</span><div class="clickable-item">  previous career: kindergarden teacher</div></a>
+            <a class="previous clickable-item" href="/kindergardenteacher.html"><span class="arrow">▼</span><div class="clickable-item">  previous career: kindergarden teacher</div></a>
           </br></br>
             <div class="white"></div><br />
             <div id="show-information" class="show-information"></div>
