--- a/kindergardenteacher.html
+++ b/kindergardenteacher.html
@@ -18,9 +18,9 @@
 
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
-        <h2 class="ms-5 mt-5">Office Assistant</h2></br>
-        <p class="ms-5">As a student I did a lot of administration, organization, customer management and writing (newsletter, advertisements,
-        website) for a <a href="https://oxalis.ch/" class="clickable-item-subsite">therapy center</a>. Furthermore I assisted in developing the company further.</p>
+        <h2 class="ms-5 mt-5">kindergarden teacher</h2></br>
+        <p class="ms-5">Here's how I got started. I spent over five years building learning environments for kids, helping them believe in
+        themselves and get the best possible starter kit for a happy and successful life.</p>
     </div>
 
 
