added subsites cas and during studies

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h2>education</h2>
           <div class="row"> 
             <div class="col-1">2021 </div>
-            <a class="col-4 text-center background-7 clickable-item" href="#" id="digibil">CAS Digital Education</a>
+            <a class="col-4 text-center background-7 clickable-item" href="/casdigitaleducation.html">CAS Digital Education</a>
             <a class="col-4 text-center background-5 clickable-item" href="#" id="coding">coding</a>
           </div>
 
@@ -121,8 +121,8 @@
 
             <div class="row">
               <div class="col-1">2017 </div>
-              <a class="col-4 text-center background-4 clickable-item" href="#" id="master">MSc Applied Psychology</a>
-              <a class="col-4 text-center background-6 clickable-item" href="#" id="trainer">education during studies</a>
+              <a class="col-4 text-center background-4 clickable-item" href="mscpsychology.html">MSc Applied Psychology</a>
+              <a class="col-4 text-center background-6 clickable-item" href="educationduringstudies.html">education during studies</a>
             </div>
 
             <div class="row">
