added all subsites

--- a/highschool.html
+++ b/highschool.html
@@ -18,11 +18,8 @@
 
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
-        <h2 class="ms-5 mt-5">trainer education</h2></br>
-        <p class="ms-5">Between 2014 and 2015, I learned how to assist groups, to help improve personal selfmanagement-skills and motivation with the Zürcher
-        Resourcen Modell ZRM <span class="ms-2 me-2">ᐅ </span><a href="https://ismz.ch/" class="clickable-item-subsite">Institute for Self-Management and Motivation Zurich</a>.</br></br>
-        In addition, I graduated as a resilience-trainer and as SIZE-process coach for personnel and organizational diagnostics in 2017 <span class="ms-2 me-2">ᐅ </span> <a href="https://resilienzforum.com/" class="clickable-item-subsite">Resilienzforum Berlin</a> & <a href="https://www.sizeprozess.at/" class="clickable-item-subsite">Top im Job Austria</a>.
-        </p>
+        <h2 class="ms-5 mt-5">highschool</h2></br>
+        <p class="ms-5">In 2005, I graduated from high school with focus on education, children development and a voluntary additional training in early education.</p>
     </div>
 
 
