--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="row"> 
             <div class="col-1">2021 </div>
             <a class="col-4 text-center background-7 clickable-item" href="/casdigitaleducation.html">CAS Digital Education</a>
-            <a class="col-4 text-center background-5 clickable-item" href="#" id="coding">coding</a>
+            <a class="col-4 text-center background-5 clickable-item" href="/coding.html">coding</a>
           </div>
 
           <div class="row">
@@ -156,7 +156,7 @@
             </div>
 
             <div class="row col-11" id="anchor-two">
-              <a class="previous clickable-item" href="#" id="previous-edu"><span class="arrow">▼</span><div class="clickable-item">   previous education: highschool examination</div></a>
+              <a class="previous clickable-item" href="/highschool.html"><span class="arrow">▼</span><div class="clickable-item">   previous education: highschool examination</div></a>
               </br></br>
               <div class="white"></div><br />
               <div id="show-information-edu" class="show-information show-information-edu"></div>
@@ -169,7 +169,7 @@
 
 <footer class="container white mt-5">
   <p>
-    <small>This application was designed and built with HTML, CSS and JavaScript. Visit me on my  
+    <small>This application was designed and built with HTML and CSS. Visit me on my  
       <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item" title="Website Katrin Fellner" target="_blank"> website</a>, on
       <a href="https://github.com/katrin-fe" class="clickable-item" title="GitHub Profile" target="_blank"> GitHub </a>
       or contact me: <a href="mailto:mail@katrinfellner.com" class="clickable-item" title="Mail Katrin Fellner"> mail@katrinfellner.com.</a> 
