--- a/coding.html
+++ b/coding.html
@@ -18,10 +18,9 @@
 
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
-        <h2 class="ms-5 mt-5">trainer education</h2></br>
-        <p class="ms-5">Between 2014 and 2015, I learned how to assist groups, to help improve personal selfmanagement-skills and motivation with the Zürcher
-        Resourcen Modell ZRM <span class="ms-2 me-2">ᐅ </span><a href="https://ismz.ch/" class="clickable-item-subsite">Institute for Self-Management and Motivation Zurich</a>.</br></br>
-        In addition, I graduated as a resilience-trainer and as SIZE-process coach for personnel and organizational diagnostics in 2017 <span class="ms-2 me-2">ᐅ </span> <a href="https://resilienzforum.com/" class="clickable-item-subsite">Resilienzforum Berlin</a> & <a href="https://www.sizeprozess.at/" class="clickable-item-subsite">Top im Job Austria</a>.
+        <h2 class="ms-5 mt-5">web development</h2></br>
+        <p class="ms-5">Next goal: learning how to code. I started my first online-course in February 2021 <span class="ms-2 me-2">ᐅ </span> <a href="https://www.shecodes.io/" class="clickable-item-subsite">SheCodes
+            </a>. After a lots of coding weekends, I built two applications and websites. Check my <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite">portfolio</a>.
         </p>
     </div>
 
