changed some content index.html

--- a/coding.html
+++ b/coding.html
@@ -19,8 +19,8 @@
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
         <h2 class="ms-5 mt-5">web development</h2></br>
-        <p class="ms-5">Next goal: learning how to code. I started my first online-course in February 2021 <span class="ms-2 me-2">ᐅ </span> <a href="https://www.shecodes.io/" class="clickable-item-subsite">SheCodes
-            </a>. After a lots of coding weekends, I built two applications and websites. Check my <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite">portfolio</a>.
+        <p class="ms-5">Next goal: learning how to code. I started my first online-course in February 2021</br> <span class="ms-1 me-1">ᐅ </span> <a href="https://www.shecodes.io/" class="clickable-item-subsite">SheCodes</a></br></br>
+            After three months of learning I published two apps and websites.</br> <span class="ms-1 me-1">ᐅ </span><a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite">See Portfolio</a>
         </p>
     </div>
 
