--- a/kindergardenteacher.html
+++ b/kindergardenteacher.html
@@ -19,7 +19,7 @@
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
         <h2 class="ms-5 mt-5">kindergarden teacher</h2></br>
-        <p class="ms-5">Here's how I got started. I spent over five years building learning environments for kids, helping them believe in
+        <p class="ms-5">This is how I started: I spent over five years building learning environments for children, helping them believe in
         themselves and get the best possible starter kit for a happy and successful life.</p>
     </div>
 
