--- a/studentjob.html
+++ b/studentjob.html
@@ -20,7 +20,7 @@
     <div>
         <h2 class="ms-5 mt-5">Office Assistant</h2></br>
         <p class="ms-5">As a student I did a lot of administration, organization, customer management and writing (newsletter, advertisements,
-        website) for a <a href="https://oxalis.ch/" class="clickable-item-subsite">therapy center</a>. Furthermore I assisted in developing the company further.</p>
+        website) for a <a href="https://oxalis.ch/" class="clickable-item-subsite">therapy center</a>. Furthermore, I assisted in developing the company further.</p>
     </div>
 
 
