--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
           <div class="row">
             <div class="col-1">2014 </div>
             <div class="col-4 text-center"></div>
-            <div class="col-4 text-center white background-4">Praxis Oxalis</div>
+            <div class="col-4 text-center white background-4">therapy center Oxalis</div>
           </div>
       
           <div class="row">
             <div class="col-1">2013 </div>
             <div class="col-4 text-center"></div>
-            <div class="col-4 text-center white background-4">Effretikon/Zurich</div>
+            <div class="col-4 text-center white background-4">Kemppthal/Zurich</div>
           </div>
       
           <div class="row">
@@ -122,19 +122,19 @@
             <div class="row">
               <div class="col-1">2017 </div>
               <a class="col-4 text-center background-4 clickable-item" href="mscpsychology.html">MSc Applied Psychology</a>
-              <a class="col-4 text-center background-6 clickable-item" href="educationduringstudies.html">education during studies</a>
+              <a class="col-4 text-center background-6 clickable-item" href="educationduringstudies.html">trainer education</a>
             </div>
 
             <div class="row">
               <div class="col-1">2016 </div>
               <div class="col-4 text-center background-4 white">Zurich University</div>
-              <div class="col-4 text-center background-6 white">University of Zurich, </div>
+              <div class="col-4 text-center background-6 white">during studies</div>
             </div>
 
             <div class="row">
               <div class="col-1">2015 </div>
               <div class="col-4 text-center background-4 white">of Applied Sciences</div>
-              <div class="col-4 text-center background-6 white">Resilienzforum Berlin</div>
+              <div class="col-4 text-center background-6 white">Berlin, Zurich</div>
             </div>
 
             <div class="row">
