--- a/mscpsychology.html
+++ b/mscpsychology.html
@@ -19,7 +19,7 @@
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
         <h2 class="ms-5 mt-5">MSc Applied Psychology</h2></br>
-        <p class="ms-5">After five years of studying human behaviour I graduated in Applied Psychology at <a href="https://www.zhaw.ch/de/psychologie/" class="clickable-item-subsite">Zurich University of Applied Sciences</a>, focused on organizational psychology,
+        <p class="ms-5">After five years of studying human behaviour I graduated in Applied Psychology at <a href="https://www.zhaw.ch/de/psychologie/" class="clickable-item-subsite">Zurich University of Applied Sciences ZHAW</a>, focused on organizational psychology,
         psychology of personal development and clinical psychology.</br></br>
         2012 - 2015: Bachelor</br>
         2015 - 2017: Master
