changed some content

--- a/casdigitaleducation.html
+++ b/casdigitaleducation.html
@@ -18,11 +18,10 @@
 
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
-        <h2 class="ms-5 mt-5">CAS Digital Education</h2></br>
+        <h2 class="ms-5 mt-5">Certified Professional in Digital Learning</h2></br>
         <p class="ms-5">This Certificate of Advanced Studies of the <a href="https://www.es.unisg.ch/de/programme/cas-digitale-bildung"
-            class="clickable-item-subsite">university of St.Gallen</a> focuses on the digital transformation of education, innovative learning designs,
-        e-assessments and e-portfolios, training of digital skills and adaptive learning systems.</br></br>
-        <a href="https://www.es.unisg.ch/de/programme/cas-digitale-bildung" class="clickable-item-subsite">see certificate</a></p>
+            class="clickable-item-subsite">University of St.Gallen</a> focuses on the digital transformation of education, innovative learning designs,
+        e-assessments and e-portfolios, training of digital skills and adaptive learning systems (Graduation: July 2021)</br>
     </div>
 
 
