--- a/consultant.html
+++ b/consultant.html
@@ -18,7 +18,7 @@
 
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
     <div>
-        <h2 class="ms-5 mt-5">Consultant Education</h2></br>
+        <h2 class="ms-5 mt-5">Educational Specialist</h2></br>
         <p class="ms-5">Since 2019 I've taken part in school development for the <a href="https://www.stadt.sg.ch/home/verwaltung-politik/direktionen/bildung-freizeit/schule-musik.html" class="clickable-item-subsite">city of St.Gallen</a>. Part of my role is facilitating the
         digitalisation, managing internal communication and assisting the management.</p>
         </p>
