--- a/freelancer.html
+++ b/freelancer.html
@@ -19,13 +19,33 @@
 <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
 <div>
     <h2 class="ms-5 mt-5 mb-4">My own business:</br>Psychology & Web Development</h2>
-    <p class="ms-5">In 2015 I established my own business - specialised in trainings, suitability diagnostics and  development centers for organizations and universities. In 2019 my book <a href="https://www.springer.com/de/book/9783658258962" class="clickable-item-subsite" target="_blank">Moderne Personalauswahl</a> (Modern Employee Selection) was published.</p>
-    <p class="ms-5">2015 - 2020: As a network partner of <a href="https://www.kadertraining.ch/" class="clickable-item-subsite" target="_blank">Netzwerk Kadertraining GmbH</a> I
-    designed, organized and executed assessment trainings for job-seeking managers. Furthermore I gave
+    <p class="ms-5">
+    In 2015, I established my own business - specialised in trainings, suitability diagnostics, development centers and, more recently, responsive web development.
+    </p>  
+    <p class="ms-5">
+    Since 2018, I am part of the assessment-team of the <a href="https://www.zhaw.ch/en/linguistics/institutes-centres/iam-institute-of-applied-media-studies/" class="clickable-item-subsite" target="_blank">Institute of Applied Media Studies IAM</a> in Winterthur (student
+    selection for the bachelor degree programme Journalism and Organisational Communication).
+    </p>
+
+    <p class="ms-5">
+    As a network partner of <a href="https://www.kadertraining.ch/" class="clickable-item-subsite" target="_blank">Netzwerk Kadertraining GmbH</a>, I
+    designed, organized and conducted assessment trainings for job-seeking managers between 2015 and 2020. Furthermore, I gave
     advice on the quality of psychological diagnostics and was responsible for coordinating with universities.
     </p>
-    <p class="ms-5">Since 2021 I design and build websites and applications. See my <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite" target="_blank">portfolio</a>.
+
+    <p class="ms-5">
+    In 2019, my book <a href="https://www.springer.com/de/book/9783658258962" class="clickable-item-subsite"
+    target="_blank">Moderne Personalauswahl</a> (Modern Employee Selection) was published.
+   </p>
+
+    <p class="ms-5">My professional interests have expanded: In 2021, I started designing and building websites and applications. See my <a
+    href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite"
+    target="_blank">portfolio</a>.</p>
     </p>
+
+
+
+
 </div>
 
 
