added further information

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Prata&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ded9c84b7e.js" crossorigin="anonymous"></script>
     <link href="/src/style.css" rel="stylesheet" type="text/css" />
     <title>CV-App Katrin Fellner</title>
 </head>
@@ -167,13 +168,87 @@
   </div>
 </div>
 
+<div class="information">
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-lg-6 col-sm-12">
+      <div class="container">
+        <h2>languages</h2>
+        <div class="row dots">
+          <div class="col-sm-6 mb-3">German (native)</div>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <div class="col-sm-6 gap mb-3">English</div>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot-no"></span>
+          <span class="dot-no"></span>
+          <div class="col-sm-6 gap mb-3">JavaScript</i></div>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot-no"></span>
+          <span class="dot-no"></span>
+          <span class="dot-no"></span>
+          <span class="dot-no"></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container mt-5">
+  <div class="row display-flex">
+    <div class="col-sm-6 col-sm-12">
+      <div class="container">
+        <h2>personal information</h2>
+        <div class="row">
+          <div class="col--sm-6 mb-1">
+            <i class="fas fa-baby me-2 mb-3"></i>1986, Austria</br>
+            <i class="fas fa-tram me-2 mb-3"></i>Switzerland since 2011</br>
+            <i class="fas fa-music me-2 mb-3"></i>guitar, piano</br>
+            <i class="fas fa-code me-2 mb-3"></i>HTML, CSS, JavaScript</br>
+            <i class="fas fa-hand-holding-heart me-2 mb-3"></i>community work, development projects</br></br>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container mt-5">
+  <div class="row display-flex">
+    <div class="col-sm-6 col-sm-12">
+      <div class="container">
+        <h2>contact</h2>
+        <div class="row">
+          <div class="col--sm-6 mb-1">
+            <div class="col-sm-6 mb-4"><img src="img/katrin.jpg" width="140"></div>
+            <i class="far fa-paper-plane me-2 mb-3"></i>mail@katrinfellner.com</br>
+            <i class="fas fa-map-marker-alt me-2 mb-3"></i>Erlenbach, Zurich</br>
+            <i class="fas fa-globe-americas me-2 mb-3"></i><a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item" title="Website Katrin Fellner"
+              target="_blank">Portfolio</a></br>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+</br>
+</br>
+</br>
+</br>
+
+
 <footer class="container white text-center border mb-4">
   <div>
-    <small>This application was designed and built with HTML and CSS. Visit me on my 
-      <a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item" title="Website Katrin Fellner" target="_blank"> website</a>, on
-      <a href="https://github.com/katrin-fe" class="clickable-item" title="GitHub Profile" target="_blank"> GitHub </a>
-      or contact me: <a href="mailto:mail@katrinfellner.com" class="clickable-item" title="Mail Katrin Fellner"> mail@katrinfellner.com.</a>
-      Thanks to <a href="https://unsplash.com/@paulearlephotography" class="clickable-item" title="Unsplash">Paul Earle</a> and Unsplash for the beautiful background-image.
+    <small>This website was designed and built with HTML and CSS. It's open source. Visit me on <a href="https://github.com/katrin-fe" class="clickable-item" title="GitHub Profile" target="_blank"> GitHub </a>. Thanks to <a href="https://unsplash.com/@paulearlephotography" class="clickable-item" title="Unsplash">Paul Earle</a> and Unsplash for the beautiful background-image.
     </small>
   </div>
 </footer>
