added content footer

--- a/index.html
+++ b/index.html
@@ -215,17 +215,23 @@
 
 
 <div class="container">
-  <div class="row display-flex">
-    <div class="col-sm-6 col-sm-12">
+  <div class="row">
+    <div class="col-lg-6 col-sm-12">
       <div class="container">
-        <h2>contact</h2>
+        <h2 class="mb-4">contact</h2>
         <div class="row">
-          <div class="col-sm-6 contact">
-            <div class="col-sm-6 mb-4"><img src="img/katrin.jpg" width="140"></div>
-            <i class="far fa-paper-plane me-2 mb-3"></i>mail@katrinfellner.com</br>
-            <i class="fas fa-map-marker-alt me-2 mb-3"></i>Erlenbach, Zurich</br>
-            <i class="fas fa-globe-americas me-2 mb-3"></i><a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item" title="Website Katrin Fellner"
-              target="_blank">Portfolio</a></br>
+          <div class="col-12">
+          <i class="far fa-paper-plane me-2 mb-3"></i>mail@katrinfellner.com</br>
+          <i class="fas fa-map-marker-alt me-2 mb-3"></i>Erlenbach, Zurich</br>
+          <i class="fas fa-globe-americas me-2 mb-3"></i><a href="https://vigorous-curran-7439b4.netlify.app/index.html"
+            class="clickable-item" title="Website Katrin Fellner" target="_blank">Portfolio</a></br></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 col-sm-12">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 mb-4"><img src="img/katrin.jpg" width="250"></div>
         </div>
       </div>
     </div>
@@ -241,7 +247,7 @@
 
 <footer class="container white text-center border mb-4">
   <div>
-    <small>This website was designed and built with HTML and CSS. It's open source. Visit me on <a href="https://github.com/katrin-fe" class="clickable-item" title="GitHub Profile" target="_blank"> GitHub </a>. Thanks to <a href="https://unsplash.com/@paulearlephotography" class="clickable-item" title="Unsplash">Paul Earle</a> and Unsplash for the beautiful background-image.
+    <small>This website was designed and built with HTML and CSS. It's open source. Visit me on <a href="https://github.com/katrin-fe" class="clickable-item" title="GitHub Profile" target="_blank"> GitHub </a>. Thanks to <a href="https://unsplash.com/@paulearlephotography" class="clickable-item" title="Unsplash">Paul Earle</a> and Unsplash for the beautiful background-image and Tanja Rissle for inspiration.
     </small>
   </div>
 </footer>
