--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <div class="col-12">
           <i class="far fa-paper-plane me-2 mb-3"></i>mail@katrinfellner.com</br>
           <i class="fas fa-map-marker-alt me-2 mb-3"></i>Erlenbach, Zurich</br>
-          <i class="fas fa-globe-americas me-2 mb-3"></i><a href="https://vigorous-curran-7439b4.netlify.app/index.html"
+          <i class="fas fa-globe-americas me-2 mb-3"></i><a href="https://www.katrin-fellner.com"
             class="clickable-item" title="Website Katrin Fellner" target="_blank">Portfolio</a></br></div>
         </div>
       </div>
