added new domain subsite owner

--- a/coding.html
+++ b/coding.html
@@ -20,7 +20,7 @@
     <div>
         <h2 class="ms-5 mt-5">web development</h2></br>
         <p class="ms-5">Next goal: learning how to code. I started my first online-course in February 2021</br> <span class="ms-1 me-1">ᐅ </span> <a href="https://www.shecodes.io/" class="clickable-item-subsite">SheCodes</a></br></br>
-            After three months of learning I published two apps and websites.</br> <span class="ms-1 me-1">ᐅ </span><a href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite">See Portfolio</a>
+            After three months of learning I published two apps and websites.</br> <span class="ms-1 me-1">ᐅ </span><a href="https://katrin-fellner.com" class="clickable-item-subsite">See Portfolio</a>
         </p>
     </div>
 
