added new domain subsite

--- a/freelancer.html
+++ b/freelancer.html
@@ -39,7 +39,7 @@
    </p>
 
     <p class="ms-5">My professional interests have expanded: In 2021, I started designing and building websites and applications. See my <a
-    href="https://vigorous-curran-7439b4.netlify.app/index.html" class="clickable-item-subsite"
+    href="https://katrin-fellner.com" class="clickable-item-subsite"
     target="_blank">portfolio</a>.</p>
     </p>
 
