deleted word in new text coding

--- a/coding.html
+++ b/coding.html
@@ -20,7 +20,7 @@
     <div>
         <h2 class="ms-5 mt-5">web development</h2></br>
         <p class="ms-5">Next goal: learning how to code. I started my first online-course in February 2021. After three months of learning I published two apps and websites.</br> <span class="ms-1 me-1">ᐅ </span><a href="https://katrin-fellner.com" class="clickable-item-subsite">See Portfolio</a><br><br>
-            In October I completed SQL basis course on udemy. See all my certificates on my </br> <span class="ms-1 me-1">ᐅ </span><a href="https://www.linkedin.com/in/katrin-fellner/" target=_blank class="clickable-item-subsite">Linkedin Profile</a><br><br>
+            In October I completed SQL basis course on udemy. See all certificates on my </br> <span class="ms-1 me-1">ᐅ </span><a href="https://www.linkedin.com/in/katrin-fellner/" target=_blank class="clickable-item-subsite">Linkedin Profile</a><br><br>
             </p>
     </div>
 
