Added Education to Description

--- a/freelancer.html
+++ b/freelancer.html
@@ -18,7 +18,7 @@
 
 <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
 <div>
-    <h2 class="ms-5 mt-5 mb-4">Katrin Fellner</br>Psychology & Web Development</h2>
+    <h2 class="ms-5 mt-5 mb-4">Katrin Fellner</br>Psychology, Education & Web Development</h2>
     <p class="ms-5">
     In 2015, I established my own business - specialised in trainings, suitability diagnostics, development centers and, more recently, responsive web development.
     </p>  
