--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="row"> 
             <div class="col-1">2021 </div>
             <a class="col-4 text-center background-7 clickable-item" href="/casdigitaleducation.html">digital</a>
-            <div class="col-4 text-center background-5 white">SheCodes, Udemy</div>
+            <div class="col-4 text-center background-5 white">SheCodes</div>
           </div>
 
           <div class="row">
