--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <span class="dot">&#8226;</span>
           <span class="dot">&#8226;</span>
           <span class="dot">&#8226;</span>
-          <span class="dot">&#8226;</span>
+          <span class="dot-no"></span>
           <span class="dot-no"></span>
           <span class="dot-no"></span>
         </div>
