added Jörg Lienert & NKT

--- a/freelancer.html
+++ b/freelancer.html
@@ -24,7 +24,10 @@
     </p>  
     <p class="ms-5">
     Since 2018, I am part of the assessment-team of the <a href="https://www.zhaw.ch/en/linguistics/institutes-centres/iam-institute-of-applied-media-studies/" class="clickable-item-subsite" target="_blank">Institute of Applied Media Studies IAM</a> in Winterthur (student
-    selection for the bachelor degree programme Journalism and Organisational Communication).
+    selection for the bachelor degree programme Journalism and Organisational Communication) and since 2022 I am happy to
+    contribute to the management diagnostic for <a href="https://www.joerg-lienert.ch/de/personalselektion/aktuell.html" class="clickable-item-subsite" target="_blank">Jörg Lienert AG</a> in Lucerne.
+
+
     </p>
 
     <p class="ms-5">
