--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
         <div class="container">
         <h2>career</h2>
 
+        <div class="row">
+          <div class="col-1">2023 </div>
+          <a class="col-4 text-center background-5 clickable-item" href="/freelancer.html">own business</a>
+          <a class="col-4 text-center background-7 clickable-item" href="/hrspecialist.html">HR specialist</a>
+        </div>
+
           <div class="row">
             <div class="col-1">2022 </div>
-            <a class="col-4 text-center background-5 clickable-item" href="/freelancer.html">own business</a>
+            <div class="col-4 text-center white background-5">Zurich</div>
             <a class="col-4 text-center background-6 clickable-item" href="/consultant.html">educational</a>
           </div>
 
           <div class="row">
             <div class="col-1">2021 </div>
-            <div class="col-4 text-center white background-5">Zurich</div>
+            <div class="col-4 text-center white background-5"></div>
             <a class="col-4 text-center background-6 clickable-item" href="/consultant.html">specialist</a>
           </div>
       
@@ -100,6 +106,11 @@
     <div class="col-lg-6 col-sm-12">
         <div class="container">
         <h2>education</h2>
+            <div class="row">
+              <div class="col-1">2023 </div>
+              <div class="col-4 text-center"></div>
+              <a class="col-4 text-center clickable-item" href="/coding.html"></a>
+            </div>
             <div class="row">
               <div class="col-1">2022 </div>
               <div class="col-4 text-center"></div>
@@ -192,7 +203,7 @@
           <div class="col-md-6 col-sm-12 mb-3">English</div>
           <span class="dot">&#8226;</span>
           <span class="dot">&#8226;</span>
-          <span class="dot">&#8226;</span>
+          <span class="dot-no"></span>
           <span class="dot-no"></span>
           <span class="dot-no"></span>
           <span class="dot-no"></span>
@@ -200,7 +211,7 @@
         <div class="row dots">
           <div class="col-md-6 col-sm-12 mb-3">JavaScript</div>
           <span class="dot">&#8226;</span>
-          <span class="dot">&#8226;</span>
+          <span class="dot-no"></span>
           <span class="dot-no"></span>
           <span class="dot-no"></span>
           <span class="dot-no"></span>
